# SpiRITROOT

./: .gitignore  CMakeLists.txt  fairDoxy.conf
SPiRIT/: CMakeLists.txt
SPiRIT/digi/: CMakeLists.txt  STAvalancheTask.cc  STAvalancheTask.hh  STClusterizerTask.cc  STClusterizerTask.hh  STDigiElectronTask.cc  STDigiElectronTask.hh  STDigiLinkDef.h  STDriftTask.cc  STDriftTask.hh  STElectronicsTask.cc  STElectronicsTask.hh  STPadResponse.hh  STPadResponseTask.cc  STPadResponseTask.hh  STProcessManager.cc  STProcessManager.hh  STdummyTask.cc  STdummyTask.hh
SPiRIT/dummies/: CMakeLists.txt  STDummyTask.cc  STdummyTask.cc  STdummyTask.hh
SPiRIT/eventdisplay/: CMakeLists.txt  STEveEventManager.cc  STEveEventManager.hh  STEveEventManagerEditor.cc  STEveEventManagerEditor.hh  STEveReco.cc  STEveReco.hh  STEventDisplayLinkDef.h  STEventDraw.cc  STEventDraw.hh  STEventDrawTask.cc  STEventDrawTask.hh  STEventManager.cc  STEventManager.hh  STEventManagerEditor.cc  STEventManagerEditor.hh  STHitClusterDraw.cc  STHitClusterDraw.hh  STHitDraw.cc  STHitDraw.hh
SPiRIT/field/: CMakeLists.txt  STConstField.cc  STConstField.hh  STConstPar.cc  STConstPar.hh  STFieldLinkDef.h  STFieldMap.cc  STFieldMapData.cc  STFieldMapData.hh  STFieldPar.cc  STMapPar.cc  STMapPar.hh
SPiRIT/format/: CMakeLists.txt  STAvalanche.cc  STAvalanche.hh  STCluster.cc  STCluster.hh  STDigitizedElectron.cc  STDigitizedElectron.hh  STDriftedElectron.cc  STDriftedElectron.hh  STEvent.cc  STEvent.hh  STFormatLinkDef.h  STHit.cc  STHit.hh  STHitCluster.cc  STHitCluster.hh  STMCPoint.cxx  STMCPoint.h  STMCPoint.hh  STPad.cc  STPad.hh  STPrimaryCluster.cc  STPrimaryCluster.hh  STRawEvent.cc  STRawEvent.hh
SPiRIT/gconfig/: SetCuts.C  g4Config.C  g4config.in
SPiRIT/geant4/: dummy.mac  eloss.C  example.cc
SPiRIT/generators/: CMakeLists.txt  STEventGenGenerator.cc  STEventGenGenerator.hh  STGenLinkDef.h  STSimpleEventGenerator.cc  STSimpleEventGenerator.hh
SPiRIT/geometry/: Spirit_Geom_v2_1.C  cave_vacuum.geo  geomSPiRIT.C  makeGeom_spirit.C  media.geo  media_pnd.geo  simple_spirit_geometry.cc  smartgeometry.c  spirit.geo  target.geo
SPiRIT/input/: GEN_singleTrack.sgen  README  UrQMD_300AMeV_short.egen
SPiRIT/macros/: digi.cc  elDistDisplay.C  eventDisplay.C  eventDisplay_MC.C  gainCheck.C  gainCheck_pad.C  makeDummy.C  makeGainCalibration.C  makePedestal.C  makePulserData.C  mapTest.C  newEventDisplay.C  newEventDisplay_mc.C  pulseStudy.C  run_digi.C  run_eve.C  run_mc.C  run_mc_UrQMD.C  run_mc_eloss.C  run_mc_map.C  run_mc_singleTrack.C  run_reco.C  run_reco_mc.C  run_sim.py  run_sim.sh  sim.py
SPiRIT/mc/: CMakeLists.txt  SPiRIT.cxx  SPiRIT.h  SPiRITGeo.cxx  SPiRITGeoPar.h  (+11 more)
(+1171 files in other folders)
