# If a directory is created, add the line below
# with the same name as the directory you created.
# add_subdirectory(DIRECTORY_NAME)

add_subdirectory(mc)
add_subdirectory(eventdisplay)
add_subdirectory(stack)
add_subdirectory(format)
add_subdirectory(par)
add_subdirectory(reco)
#add_subdirectory(digi)
